--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
        font-family: 'Poppins', sans-serif;
        margin: 0;
        padding: 0;
-       background: #111;
+       background: #ffc400;
        color: white;
        transition: background 0.3s, color 0.3s;
    }
@@ -68,7 +68,7 @@
 
    .whatsapp-button {
        display: inline-block;
-       background-color: #ffc400;
+       background-color: #000000;
        color: white;
        padding: 15px 25px;
        border-radius: 5px;
