--- a/main.css
+++ b/main.css
@@ -11,7 +11,8 @@
        background: #000;
        padding: 40px 20px;
        text-align: center;
-       position: sticky;
+       font-size: 1,2rem;
+       /* position: sticky; */
        top: 0;
        z-index: 1000;
    }
