--- a/main.css
+++ b/main.css
@@ -4,36 +4,41 @@
        padding: 0;
        background: #ffc400;
        color: white;
-       transition: background 0.3s, color 0.3s;
+       /* transition: background 0.3s, color 0.3s; */
    }
 
    header {
-       background: #000;
+       /* background: #000;
        padding: 40px 20px;
-       text-align: center;
-       font-size: 1,2rem;
+       /* text-align: center; */
+       /* font-size: 1,2rem; */
        /* position: sticky; */
-       top: 0;
-       z-index: 1000;
+       /* top: 0; */
+       /* z-index: 1000; */
    }
 
    nav {
        background: #1c1c1c;
-       padding: 10px;
+       /* padding: 10px;
        text-align: center;
        position: sticky;
        top: 80px;
-       z-index: 999;
+       z-index: 999; */
    }
 
-   nav a {
+   .nav-link {
        color: white;
        margin: 0 15px;
        text-decoration: none;
        font-weight: bold;
    }
 
-   nav a:hover {
+   .navbar-toggler {
+       color: #ffc400;
+   }
+
+   .actived,
+   .nav-link:hover {
        color: #ffc400;
    }
 
@@ -47,6 +52,10 @@
        background: #000;
        text-align: center;
        padding: 20px;
+   }
+
+   img pattern {
+       width: 100%;
    }
 
    .gallery {
@@ -71,6 +80,7 @@
        display: inline-block;
        background-color: #000000;
        color: white;
+       margin-right: 1%;
        padding: 15px 25px;
        border-radius: 5px;
        font-size: 16px;
@@ -118,11 +128,22 @@
    }
 
    .logo-header {
-       max-width: 200px;
-       max-height: 100px;
-       height: auto;
-       width: auto;
+       /* max-width: 30vw; */
+       height: 50px;
+       margin-left: 20px;
+       margin-top: 10px;
+       /* max-height: 100px; */
+       /* height: auto; */
+       /* width: auto; */
+       /*   float: left; */
    }
+
+   /* @media only screen and (max-width: 760px) {
+        .logo-header {
+            max-width: 80vw;
+            margin-left: 20px;
+        }
+    } */
 
    .full-width {
        width: 100%;
