--- a/main.css
+++ b/main.css
@@ -48,9 +48,9 @@
        padding: 20px;
    }
 
-   #Hero {  
+   #Hero {
        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Image/Kitanation-BackGround.png");
-       height: 50%;
+       /* height: 50%; */
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
@@ -73,6 +73,24 @@
 
    .gallery img:hover {
        transform: scale(1.05);
+   }
+
+   .Hero-button {
+       display: inline-block;
+       background-color: #ffc400;
+       color: rgb(0, 0, 0);
+       margin-top: 1%;
+       margin-right: 1%;
+       padding: 15px 25px;
+       border-radius: 5px;
+       font-size: 16px;
+       text-decoration: none;
+       animation: pulse 2s infinite;
+   }
+
+   .Hero-button:hover {
+       background-color: #000;
+       color: #ffc400;
    }
 
    .whatsapp-button {
